<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/id_display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="36sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/id_ce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/amarillo"
                android:onClick="botonPulsado"
                android:text="@string/button_ce"
                android:textSize="18sp" />

            <Button
                android:id="@+id/id_porcentaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/azulOscuro"
                android:onClick="botonPulsado"
                android:text="@string/button_porcentaje"
                android:textSize="18sp" />

            <Button
                android:id="@+id/id_mas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/turquesa"
                android:onClick="botonPulsado"
                android:text="@string/button_mas"
                android:textSize="18sp" />

            <Button
                android:id="@+id/id_menos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/turquesa"
                android:onClick="botonPulsado"
                android:text="@string/button_menos"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/id_siete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/azul"
                android:onClick="botonPulsado"
                android:text="@string/button_siete"
                android:textSize="18sp" />

            <Button
                android:id="@+id/id_ocho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/azul"
                android:onClick="botonPulsado"
                android:text="@string/button_ocho"
                android:textSize="18sp" />

            <Button
                android:id="@+id/id_nueve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/azul"
                android:onClick="botonPulsado"
                android:text="@string/button_nueve"
                android:textSize="18sp" />

            <Button
                android:id="@+id/id_division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/turquesa"
                android:onClick="botonPulsado"
                android:text="@string/button_division"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/id_cuatro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/azul"
                android:onClick="botonPulsado"
                android:text="@string/button_cuatro"
                android:textSize="18sp" />

            <Button
                android:id="@+id/id_cinco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/azul"
                android:onClick="botonPulsado"
                android:text="@string/button_cinco"
                android:textSize="18sp" />

            <Button
                android:id="@+id/id_seis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/azul"
                android:onClick="botonPulsado"
                android:text="@string/button_seis"
                android:textSize="18sp" />

            <Button
                android:id="@+id/id_multiplicar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/turquesa"
                android:onClick="botonPulsado"
                android:text="@string/button_multiplicar"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/id_uno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/azul"
                        android:onClick="botonPulsado"
                        android:text="@string/button_uno"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/id_dos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/azul"
                        android:onClick="botonPulsado"
                        android:text="@string/button_dos"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/id_tres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/azul"
                        android:onClick="botonPulsado"
                        android:text="@string/button_tres"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <Button
                        android:id="@+id/id_cero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/azul"
                        android:onClick="botonPulsado"
                        android:text="@string/button_cero"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/id_punto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:backgroundTint="@color/azulOscuro"
                        android:onClick="botonPulsado"
                        android:text="@string/button_punto"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/id_igual"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/rojo"
                    android:onClick="botonPulsado"
                    android:text="@string/button_igual"
                    android:textSize="30sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>